# find_package(Eigen3)

# find_package(blaze)
# add_executable(blaze blaze.cc)

# find_package(SeqAn3 HINTS "${CMAKE_SOURCE_DIR}/seqan3/build_system")

# add_executable(eigen eigen.cc)
# target_link_libraries(eigen Eigen3::Eigen)

# add_executable(seqan seqan.cc)
# target_link_libraries(seqan PUBLIC seqan3::seqan3)
